cmake_minimum_required (VERSION 2.8) 
project (raspicam_test)
set(raspicam_DIR "/usr/local/lib/cmake")
find_package(raspicam REQUIRED)
find_package(OpenCV)
find_package (Threads)
IF  ( OpenCV_FOUND AND raspicam_CV_FOUND)
MESSAGE(STATUS "COMPILING OPENCV TESTS")
add_executable (object blob.cpp)  
target_link_libraries (object ${raspicam_CV_LIBS})
target_link_libraries (object ${CMAKE_THREAD_LIBS_INIT})
ELSE()
MESSAGE(FATAL_ERROR "OPENCV NOT FOUND IN YOUR SYSTEM")
ENDIF()
